Fix error in local dev where inserted div causes layout shift

--- a/packages/eleventy/src/css/components/_footer.scss
+++ b/packages/eleventy/src/css/components/_footer.scss
@@ -2,7 +2,8 @@
 	background-color: var(--background-color);
 	color: var(--gray);
 	font-size: 0.75rem;
-	
+	grid-area: 'footer';
+
 	&__content {
 		display: grid;
 		grid-template: auto / 1fr auto;
